--- a/app/src/main/res/layout/fragment_dados.xml
+++ b/app/src/main/res/layout/fragment_dados.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DadosFragment" />
+    android:background="@color/purple_500"
+    tools:context=".DadosFragment">
+
+    <ImageView
+        android:id="@+id/ivDado1"
+        android:layout_width="156dp"
+        android:layout_height="181dp"
+        android:layout_gravity="center|left"
+        android:onClick="random"
+        android:src="@drawable/dice1" />
+
+    <ImageView
+        android:id="@+id/ivDado2"
+        android:layout_width="156dp"
+        android:layout_height="181dp"
+        android:layout_gravity="center|right"
+        android:onClick="random"
+        android:src="@drawable/dice2" />
+
+    <TextView
+        android:id="@+id/tvResultado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/cero"
+        android:textColor="@color/white"
+        android:textSize="48sp" />
+</FrameLayout>
