--- a/app/src/main/res/layout/fragment_calculadora.xml
+++ b/app/src/main/res/layout/fragment_calculadora.xml
@@ -3,4 +3,227 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CalculadoraFragment" />
+    android:background="@color/black"
+    tools:context=".CalculadoraFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvPantalla"
+            android:layout_width="match_parent"
+            android:layout_height="159dp"
+            android:layout_margin="20dp"
+            android:background="#8C8383"
+            android:gravity="right|center_vertical"
+            android:text="@string/Cero"
+            android:textColor="@color/white"
+            android:textSize="34sp" />
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/btnClear"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="3"
+                    android:backgroundTint="#FFFFFF"
+                    android:text="@string/CLEAR"
+                    android:textColor="#090909"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btnDividir"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:backgroundTint="@color/Naranja"
+                    android:onClick="onClickOp"
+                    android:text="@string/Dividir"
+                    android:textSize="24sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="234dp"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/btnSiete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:text="@string/Siete"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btnOcho"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:text="@string/Ocho"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btnNueve"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:text="@string/Nueve"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btnMultiplicar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:backgroundTint="@color/Naranja"
+                    android:onClick="onClickOp"
+                    android:text="@string/Multiplicar"
+                    android:textSize="24sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/btnCuatro"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:text="@string/Cuatro"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btnCinco"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:text="@string/Cinco"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btnSeis"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:text="@string/Seis"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btnRestar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:backgroundTint="@color/Naranja"
+                    android:onClick="onClickOp"
+                    android:text="@string/Restar"
+                    android:textSize="24sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/btnUno"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:text="@string/Uno"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btnDos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:text="@string/Dos"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btnTres"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:text="@string/Tres"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btnSumar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:backgroundTint="@color/Naranja"
+                    android:onClick="onClickOp"
+                    android:text="@string/Sumar"
+                    android:textSize="24sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/btnCero"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="2"
+                    android:text="@string/Cero"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btnPunto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:text="@string/Punto"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btnIgual"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:layout_span="1"
+                    android:backgroundTint="@color/Naranja"
+                    android:text="@string/Igual"
+                    android:textSize="24sp" />
+            </TableRow>
+        </TableLayout>
+    </LinearLayout>
+</FrameLayout>
