--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Naranja">#FF5722</color>
+    <color name="RojoOscuro">#930117</color>
+    <color name="CharColor">#930117</color>
 </resources>
