Commit cuarto. Calculadora IMC completada

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,12 @@
     <color name="Naranja">#FF5722</color>
     <color name="RojoOscuro">#930117</color>
     <color name="CharColor">#930117</color>
+    <color name="purple">#520ECA</color>
+    <color name="deepblue">#0D2DDF</color>
+    <color name="lightblue">#24BABA</color>
+    <color name="green">#23AC28</color>
+    <color name="yellow">#FBE51D</color>
+    <color name="darkyellow">#D88A16</color>
+    <color name="orange">#EA400C</color>
+    <color name="red">#DC0808</color>
 </resources>
